terraform/ec2.tf
locals {
  fck_nat_ami_id = "ami-007a361b1732d2cef"

  ubuntu_ami_id = "ami-03aceba5007a505dc"
}

resource "aws_instance" "ec2-aps1-test-nat-001" {
  ami           = local.fck_nat_ami_id
  instance_type = "t4g.nano"
  key_name      = aws_key_pair.kp-aps1-test-001.key_name

  primary_network_interface {
    network_interface_id = aws_network_interface.nic-aps1-test-nat-001.id
  }

  tags = {
    Name = "ec2-aps1-test-nat-001"
  }
}

resource "aws_instance" "ec2-aps1-test-app-001" {
  ami                    = local.ubuntu_ami_id
  instance_type          = "c8i.xlarge"
  subnet_id              = aws_subnet.snet-aps1-test-private-001.id
  vpc_security_group_ids = [aws_security_group.sg-aps1-test-app-001.id]
  key_name               = aws_key_pair.kp-aps1-test-001.key_name

  cpu_options {
    nested_virtualization = "enabled"
  }

  root_block_device {
    volume_size = 100
  }

  tags = {
    Name = "ec2-aps1-test-app-001"
  }
}
